--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ packaging==23.2
 pillow==10.2.0
 pyparsing==3.1.1
 python-dateutil==2.8.2
+recordclass==0.21.1
 requests==2.28.1
 six==1.16.0
 torch==1.11.0+cu115
