--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,6 @@ python-dateutil==2.8.2
 recordclass==0.21.1
 requests==2.28.1
 six==1.16.0
-torch==1.11.0+cu115
-torchaudio==0.11.0+cu115
-torchvision==0.12.0+cu115
+torch
 typing_extensions==4.10.0
 urllib3==1.26.13
